# digitz

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml  pypi.yml  python-app.yml  testcov.yml
apiref/enums/: index.html
apiref/phonenumbers/: index.html
docs/: CNAME  design-details.md  index.md  walkthrough.md  why-digitz.md
docs/apiref/: enums.md  exceptions.md  phonenumbers.md
src/digitz/: __about__.py  __init__.py  enums.py  exceptions.py  interface.py  parse.py  phonenumbers.py  undefined.py  utils.py
tests/: fixtures.py  parametrize.py  test_digitz.py  test_formats.py  test_frozenphonenumber.py  test_match.py  test_metadata.py  test_national_number.py  test_number_types.py  test_parse.py  test_phonenumber.py  test_phonenumbers.py  test_properties.py  test_utils.py  utils.py
walkthrough/: index.html
why-digitz/: index.html
