[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitz"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan Kroon", email = "rykroon.tech@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "phonenumbers>=8.*",
]

[project.urls]
Documentation = "https://github.com/unknown/digitz#readme"
Issues = "https://github.com/unknown/digitz/issues"
Source = "https://github.com/unknown/digitz"

[tool.hatch.version]
path = "src/digitz/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.coverage.run]
source_pkgs = ["digitz", "tests"]
branch = true
parallel = true
omit = [
  "src/digitz/__about__.py",
]

[tool.coverage.paths]
digitz = ["src/digitz", "*/digitz/src/digitz"]
tests = ["tests", "*/digitz/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
