[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitz"
dynamic = ["version"]
description = 'Python phone numbers made easy.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan Kroon", email = "rykroon.tech@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "phonenumbers==8.*",
]

[project.urls]
Documentation = "https://github.com/rykroon/digitz#readme"
Issues = "https://github.com/rykroon/digitz/issues"
Source = "https://github.com/rykroon/digitz"

[tool.hatch.version]
path = "src/digitz/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.test.scripts]
test = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report -m",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["digitz", "tests"]
branch = true
parallel = true
omit = [
  "src/digitz/__about__.py",
]

[tool.coverage.paths]
digitz = ["src/digitz", "*/digitz/src/digitz"]
tests = ["tests", "*/digitz/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
